--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zero-mobile",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Mobile Wallet for ZERO",
   "main": "index.js",
   "scripts": {
@@ -76,13 +76,18 @@
   "dependencies": {
     "cordova-android": "^6.2.3",
     "cordova-clipboard": "^1.2.1",
+    "cordova-ios": "^4.5.4",
+    "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-disable-ios11-statusbar": "^1.0.0",
     "cordova-plugin-file": "^4.3.3",
     "cordova-plugin-google-analytics": "^1.8.3",
     "cordova-plugin-http": "^1.2.0",
     "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-qrscanner": "^2.6.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-wkwebview-engine": "^1.1.4",
     "danielsogl-cordova-plugin-clipboard": "^1.0.2",
@@ -98,10 +103,14 @@
       "cordova-plugin-device": {},
       "cordova-plugin-wkwebview-engine": {},
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-google-analytics": {}
+      "cordova-plugin-google-analytics": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-disable-ios11-statusbar": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
