--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-wkwebview-engine": "^1.1.4",
     "danielsogl-cordova-plugin-clipboard": "^1.0.2",
-    "zencashjs": "git+https://github.com/joshyOcuk/btczjs.git"
+    "zencashjs": "git+https://github.com/zerocurrencycoin/zerojs.git"
   },
   "cordova": {
     "plugins": {
