--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
+    "bitgo-utxo-lib": "git+https://github.com/zerocurrencycoin/bitgo-utxo-lib.git",
     "cordova-android": "^6.2.3",
     "cordova-clipboard": "^1.2.1",
-    "cordova-ios": "^4.5.4",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
@@ -88,8 +89,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-wkwebview-engine": "^1.1.4",
-    "danielsogl-cordova-plugin-clipboard": "^1.0.2",
-    "zencashjs": "git+https://github.com/zerocurrencycoin/zerojs.git"
+    "danielsogl-cordova-plugin-clipboard": "^1.0.2"
   },
   "cordova": {
     "plugins": {
@@ -101,8 +101,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-wkwebview-engine": {},
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-google-analytics": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-google-analytics": {}
     },
     "platforms": [
       "android",
