--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zero-mobile",
-  "version": "1.0.1",
-  "description": "Mobile Wallet for ZERO",
+  "name": "bitzec-mobile",
+  "version": "1.0.0",
+  "description": "Mobile Wallet for Bitzec",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --host 0.0.0.0 --progress --content-base www/",
@@ -76,7 +76,7 @@
   "dependencies": {
     "bitgo-utxo-lib": "git+https://github.com/zerocurrencycoin/bitgo-utxo-lib.git",
     "cordova-android": "^6.2.3",
-    "cordova-clipboard": "^1.2.1",
+    "cordova-clipboard": "^1.3.0",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-compat": "^1.2.0",
@@ -93,16 +93,16 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-qrscanner": {},
       "cordova-plugin-file": {},
       "cordova-plugin-http": {},
       "cordova-clipboard": {},
       "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-google-analytics": {},
       "cordova-plugin-device": {},
       "cordova-plugin-wkwebview-engine": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-google-analytics": {}
+      "cordova-plugin-qrscanner": {}
     },
     "platforms": [
       "android",
